[package]
name = "seqcomplexity"
version = "0.1.1"
authors = ["Steven Weaver <steven@stevenweaver.org>"]
edition = "2018"
license = "MIT"
description = "Calculates per-read and total sequence complexity from FastQ file."
repository = "https://github.com/stevenweaver/seqcomplexity"
homepage = "https://stevenweaver.org"
keywords = ["fastq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.4.0"
clap = "3.0.12"
serde_json = "1.0.62"
tera = "1.6.1"
chrono = "0.4.19"
reqwest = "0.9.0"
rustc-hash = "1.1.0"
itertools = "0.10.0"

[[bin]]
name = "seqcomplexity"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
